# kto

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
assets/: platforms.toml  render.mjs
migrations/: V1__initial_schema.sql  V2__unique_watch_names.sql  V3__per_watch_notify.sql  V4__reminders.sql  V5__watch_tags.sql  V6__profile_fields.sql
scripts/: orchestrate.py
scripts/intents/: example_e2e.toml  example_live.toml
scripts/orchestrate/: __init__.py  config.py  cycle.py  efficacy.py  evaluator.py  experimenter.py  intents.py  knowledge.py  kto_client.py  log.py  report.py  server_bridge.py  state.py
src/: agent.rs  cli.rs  config.rs  db.rs  diff.rs  error.rs  extract.rs  fetch.rs  filter.rs  intent.rs  interests.rs  lib.rs  main.rs  normalize.rs  notify.rs  page_facts.rs  platform.rs  transforms.rs  utils.rs  validate.rs  watch.rs
src/commands/: check.rs  misc.rs  mod.rs  notify.rs  platform_detect.rs  profile.rs  remind.rs  service.rs  watch.rs
src/tui/: editor.rs  input.rs  mod.rs  render.rs  state.rs  types.rs  utils.rs
tests/: live_platform_test.rs  magical_ux_test.rs  platform_detection_test.rs
tests/e2e/: README.md  run.sh  run_suite.py
tests/e2e/harness/: server.py
