[package]
name = "kto"
version = "0.1.0"
edition = "2021"
description = "A generic, flexible web change watcher"
license = "MIT"
readme = "README.md"
repository = "https://github.com/devinbernosky/kto"

[dependencies]
# HTTP client (blocking, minimal)
ureq = { version = "3", features = ["json"] }

# HTML extraction
readability-js = "0.1"      # Mozilla Readability.js via QuickJS
scraper = "0.22"            # CSS selectors for manual extraction

# RSS/Atom feed parsing
feed-rs = "2"

# Diffing
similar = "2"               # Word/line/char level diffing

# Database
rusqlite = { version = "0.34", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }

# Compression
zstd = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.7"             # Interactive prompts
ctrlc = "3"                 # Ctrl+C handler
rand = "0.8"                # Random number generation

# TUI (optional, for dashboard)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"               # Content hashing
hex = "0.4"                 # Hex encoding for hashes
regex = "1"                 # Regular expressions
thiserror = "2"             # Error types
directories = "5"           # XDG paths (~/.config, ~/.local/share, etc.)
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
atty = "0.2"                # TTY detection
once_cell = "1"             # Lazy static initialization
colored = "3"               # Terminal colors
base64 = "0.22"             # Base64 encoding for SMTP auth
urlencoding = "2"           # URL encoding for Matrix room IDs

[features]
default = []
tui = ["ratatui", "crossterm"]

[profile.release]
lto = true
codegen-units = 1
strip = true
